proc-macros/tests/ui/incorrect/method/method_non_result_return_type.stderr
error: Expecting something like 'Result<Foo, Err>' here, but got no generic args (eg no '<Foo,Err>').
 --> tests/ui/incorrect/method/method_non_result_return_type.rs:6:23
  |
6 |     async fn a(&self) -> u16;
  |                          ^^^

error[E0308]: mismatched types
 --> tests/ui/incorrect/method/method_non_result_return_type.rs:3:1
  |
3 | #[rpc(client)]
  | ^^^^^^^^^^^^^^ expected `()`, found `Result<_, ClientError>`
  |
  = note: expected unit type `()`
                  found enum `Result<_, ClientError>`
help: consider using `Result::expect` to unwrap the `Result<_, ClientError>` value, panicking if the value is a `Result::Err`
  |
3 | #[rpc(client)].expect("REASON")
  |               +++++++++++++++++
